# data-pipeline

./: Dockerfile  pyproject.toml  run_pipeline.py
.github/workflows/: test.yml
data/processed/: pipeline.db
src/pipeline/: clean.py  database.py  load.py
tests/: test_load.py
