[project]
name = "data-pipeline"
version = "0.1.0"
description = ""
authors = [
    {name = "Gabrielle Duldulao",email = "hubgob123@gmail.com"}
]
requires-python = "^3.11"
dependencies = [
    "pandas (>=3.0.2,<4.0.0)",
    "requests (>=2.33.1,<3.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]

[tool.poetry]
name = "data-pipeline"
version = "0.1.0"
description = ""
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "*"
requests = "*"
sqlalchemy = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"


